register-->Verify
